<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:padding="16dp"
    tools:context=".Activities.HeartRate">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Medical Logo -->
        <ImageView
            android:id="@+id/medical_logo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:contentDescription="@string/heart_logo"
            android:scaleType="centerInside"
            android:src="@drawable/medical" />

        <!-- Heart Rate Title -->
        <TextView
            android:id="@+id/heart_rate_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/heart_beat_rate"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <!-- Heart Rate Value -->
        <TextView
            android:id="@+id/heart_rate_value"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_red_dark"
            android:gravity="center"
            android:hint="@string/_0"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

    </LinearLayout>
</androidx.wear.widget.BoxInsetLayout>
