<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:padding="16dp"
    tools:context=".Activities.StepCounterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/medical_logo"
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:contentDescription="@string/calories_logo"
            android:scaleType="centerInside"
            android:src="@drawable/calories" />

        <!-- Calories Burned Title -->
        <TextView
            android:id="@+id/calories_burned_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/calories_burned"
            android:textColor="@color/green"
            android:textSize="16sp"
            android:textStyle="bold" />

        <!-- Calories Burned Value -->
        <TextView
            android:id="@+id/calories_burned"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="Calories Burned: 0.0"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <!-- Step Count Value -->
        <TextView
            android:id="@+id/step_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/steps_0"
            android:textColor="@android:color/white"
            android:textSize="16sp" />
    </LinearLayout>
</androidx.wear.widget.BoxInsetLayout>
